# recsys-proxy-cache

./: .dockerignore  Jenkinsfile  LICENSE  call-recsys-proxy-cache.sh  docker-compose-deploy.yml  docker-compose.yml  doggy-hooks  recsys.proto
lookaside-load-balancer/: Dockerfile
lookaside_load_balancer/: Dockerfile  response.json
recsys/: .venv  Dockerfile  build_model.py  requirements.txt
recsys-proxy-cache/java/: Dockerfile  README.md  pull-tensorflow-serving-protos.py  settings.gradle
recsys-proxy-cache/java/app/: build.gradle  gradle.properties
recsys-proxy-cache/java/app/src/main/java/: GenerateCollidingHashKeysForTests.java
recsys-proxy-cache/java/app/src/main/java/recsys_proxy_cache/: App.java  GrpcService.java  RecsysProxy.java  ScoreCache.java
recsys-proxy-cache/java/app/src/main/proto/: recsys.proto
recsys-proxy-cache/java/app/src/main/resources/: high-cardinality-context-keys.json
recsys_proxy_cache/cpp/server/: Dockerfile
recsys_proxy_cache/java/: .gitignore  Dockerfile  download_tensorflow_serving_protos.sh
recsys_proxy_cache/java/app/: build.gradle
recsys_proxy_cache/java/app/src/main/proto/: recsys.proto
recsys_proxy_cache/rust/: Cargo.toml  build.rs
recsys_proxy_cache/rust/proto/: recsys.proto
recsys_proxy_cache/rust/src/: cache.rs  server.rs
tests/: .gitignore  .venv  Dockerfile  docker-entrypoint.sh  generate-python-from-protobuf.sh  pyproject.toml  requirements.txt
tests/src/: conftest.py  test_high_cardinality_keys.py  test_proxy_cache.py  tests.py  utils.py
tests/src/proto/: recsys.py
(+15 files in other folders)
